--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,8 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
 <div class="container content">
+  <h1> <%= link_to "Assignment Tracker" , assignments_path %> </h1>
 	<%= yield %>
 </div>
 
