added some green buttons and a seed file for students and projects

--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -3,5 +3,5 @@
 	<%= x.text_field :first_name %>
 	<%= x.label :last_name %>
 	<%= x.text_field :last_name %>
-	<%= x.submit %>
+  <%= f.submit class: 'btn btn-success' %>
 <% end %>
