--- a/app/views/assignments/_form.html.erb
+++ b/app/views/assignments/_form.html.erb
@@ -3,7 +3,7 @@
   <%= x.collection_select :student_id, Student.all, :id, :first_name %>
   <%= label_tag(:project_id, "Project") %>
   <%= x.collection_select :project_id, Project.all, :id, :title %>
-  <%= x.label :grade %>
+ <%= x.label :grade %>
   <%= x.text_field :grade %>
-  <%= x.submit %>
+  <%= x.submit class: 'btn btn-success' %>
 <% end %>
