--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -3,5 +3,5 @@
 	<%= x.text_field :title %>
 	<%= x.label :description %>
 	<%= x.text_area :description %>
-	<%= x.submit %>
+ <%= f.submit class: 'btn btn-success' %>
 <% end %>
